Robust FileManager modify event listener/handler completed # TODO - FileManager Functionalities - Fix Img2Img generation logic - Robust watermark utils - Auto sign - Database - FileManager preview zoomable - images doesn't save without output folder