@@ -5,19 +5,24 @@ import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
-import javafx.event.EventType;
 import javafx.scene.control.SelectionMode;
 import javafx.scene.control.TreeItem;
 import javafx.scene.control.TreeView;
 import lombok.Setter;
 import lombok.extern.log4j.Log4j2;
+import org.kordamp.ikonli.fontawesome5.FontAwesomeSolid;
+import org.kordamp.ikonli.javafx.FontIcon;
 
 import java.io.File;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardWatchEventKinds;
 import java.nio.file.WatchEvent;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Predicate;
 
 @Log4j2
@@ -26,6 +31,8 @@ public class FileTreeController {
     @Setter
     private TreeView<String> fileTreeView;
     private FilteredList<TreeItem<String>> filteredTreeItems;
+    private final AtomicBoolean isRefreshing = new AtomicBoolean(false);
+    private final Map<String, TreeItem<String>> pathToItemMap = new HashMap<>();
 
     public FileTreeController(FileManagerService fileManagerService) {
         this.fileManagerService = fileManagerService;
@@ -40,17 +47,34 @@ public class FileTreeController {
             log.error("fileTreeView is null in FileTreeController");
             return;
         }
-        fileManagerService.getDirectoryTree().thenAccept(root -> {
-            Platform.runLater(() -> {
-                ObservableList<TreeItem<String>> observableList = FXCollections.observableArrayList(root.getChildren());
-                filteredTreeItems = new FilteredList<>(observableList);
-                TreeItem<String> filteredRoot = new TreeItem<>("監視的目錄");
-                filteredRoot.setExpanded(true);
-                filteredRoot.getChildren().addAll(filteredTreeItems);
-                fileTreeView.setRoot(filteredRoot);
-                log.info("已刷新檔案樹視圖");
-            });
-        });
+        if (isRefreshing.compareAndSet(false, true)) {
+            fileManagerService.getDirectoryTree().thenAccept(root -> Platform.runLater(() -> {
+                try {
+                    ObservableList<TreeItem<String>> observableList = FXCollections.observableArrayList(root.getChildren());
+                    filteredTreeItems = new FilteredList<>(observableList);
+                    TreeItem<String> filteredRoot = new TreeItem<>("監視的目錄");
+                    filteredRoot.setExpanded(true);
+                    filteredRoot.getChildren().addAll(filteredTreeItems);
+                    fileTreeView.setRoot(filteredRoot);
+                    updatePathToItemMap(filteredRoot);
+                    log.info("已刷新檔案樹視圖");
+                } catch (Exception e) {
+                    log.error("刷新檔案樹時發生錯誤", e);
+                } finally {
+                    isRefreshing.set(false);
+                }
+            }));
+        } else {
+            log.debug("刷新操作已在進行中，跳過此次刷新請求");
+        }
+    }
+
+    private void updatePathToItemMap(TreeItem<String> item) {
+        String path = buildFullPath(item);
+        pathToItemMap.put(path, item);
+        for (TreeItem<String> child : item.getChildren()) {
+            updatePathToItemMap(child);
+        }
     }
 
     public void setSearchFilter(String searchText) {
@@ -79,30 +103,31 @@ public class FileTreeController {
     }
 
     public String buildFullPath(TreeItem<String> item) {
+        if (item == null) {
+            return "";
+        }
+
         List<String> pathParts = new ArrayList<>();
         TreeItem<String> current = item;
         while (current != null && !current.getValue().equals("監視的目錄")) {
-            pathParts.add(0, current.getValue());
+            pathParts.addFirst(current.getValue());
             current = current.getParent();
         }
 
         if (pathParts.isEmpty()) {
-            log.warn("無法構建完整路徑：路徑為空");
             return "";
         }
 
-        String watchedDir = pathParts.get(0);
+        String watchedDir = pathParts.getFirst();
         String watchedDirFullPath = fileManagerService.getWatchedDirectoryFullPath(watchedDir);
 
         if (watchedDirFullPath == null) {
-            log.warn("無法找到監視目錄的完整路徑: {}", watchedDir);
             return String.join(File.separator, pathParts);
         }
 
-        pathParts.remove(0);
+        pathParts.removeFirst();
         return Paths.get(watchedDirFullPath, String.join(File.separator, pathParts)).toString();
     }
-
 
     public void selectAllInDirectory(TreeItem<String> directoryItem) {
         if (directoryItem != null && directoryItem.isExpanded()) {
@@ -116,54 +141,114 @@ public class FileTreeController {
 
     public void updateTreeItem(String path, WatchEvent.Kind<?> eventKind) {
         Platform.runLater(() -> {
-            TreeItem<String> root = fileTreeView.getRoot();
-            if (root != null) {
-                updateTreeItemRecursive(root, path, eventKind);
-            } else {
-                log.warn("文件樹根節點為空");
+            try {
+                if (eventKind == StandardWatchEventKinds.ENTRY_DELETE) {
+                    removeDeletedItem(path);
+                } else if (eventKind == StandardWatchEventKinds.ENTRY_CREATE) {
+                    addNewItem(path);
+                } else if (eventKind == StandardWatchEventKinds.ENTRY_MODIFY) {
+                    updateModifiedItem(path);
+                }
+            } catch (Exception e) {
+                log.error("更新樹項目時發生錯誤", e);
             }
         });
     }
 
-    private void updateTreeItemRecursive(TreeItem<String> item, String path, WatchEvent.Kind<?> eventKind) {
-        String itemPath = buildFullPath(item);
-        if (itemPath.isEmpty()) {
-            return;
+    private void removeDeletedItem(String path) {
+        TreeItem<String> item = pathToItemMap.remove(path);
+        if (item != null) {
+            TreeItem<String> parent = item.getParent();
+            if (parent != null) {
+                parent.getChildren().remove(item);
+            }
+        } else {
+            log.warn("無法找到要刪除的項目: {}", path);
         }
+    }
 
-        if (path.startsWith(itemPath)) {
-            if (path.equals(itemPath)) {
-                // 找到了匹配的項目
-                TreeItem<String> parent = item.getParent();
-                if (parent != null) {
-                    if (eventKind == StandardWatchEventKinds.ENTRY_CREATE || eventKind == StandardWatchEventKinds.ENTRY_DELETE) {
-                        // 處理子項修改事件
-                        refreshChildren(item);
-                    } else if (eventKind == StandardWatchEventKinds.ENTRY_MODIFY) {
-                        // 處理值變更事件
-                        item.setValue(new File(path).getName());
-                    }
-                }
-            } else {
-                // 繼續在子項中搜索
-                for (TreeItem<String> child : item.getChildren()) {
-                    updateTreeItemRecursive(child, path, eventKind);
-                }
+    private void addNewItem(String path) {
+        File file = new File(path);
+        String parentPath = file.getParent();
+        TreeItem<String> parentItem = pathToItemMap.get(parentPath);
+        if (parentItem != null) {
+            TreeItem<String> newItem = createTreeItem(file);
+            parentItem.getChildren().add(newItem);
+            pathToItemMap.put(path, newItem);
+            if (file.isDirectory()) {
+                loadChildrenInBatches(newItem, file);
+            }
+        } else {
+            log.warn("無法找到父項目來添加新項目: {}", path);
+        }
+    }
+
+    private void updateModifiedItem(String path) {
+        TreeItem<String> item = pathToItemMap.get(path);
+        if (item != null) {
+            File file = new File(path);
+            item.setGraphic(getFileIcon(file));
+            if (file.isDirectory()) {
+                item.getChildren().clear();
+                loadChildrenInBatches(item, file);
+            }
+        } else {
+            log.warn("無法找到要更新的項目: {}", path);
+        }
+    }
+
+    private TreeItem<String> createTreeItem(File file) {
+        TreeItem<String> item = new TreeItem<>(file.getName(), getFileIcon(file));
+        if (file.isDirectory()) {
+            item.setExpanded(fileManagerService.isDirectoryExpanded(file.getAbsolutePath()));
+        }
+        return item;
+    }
+
+    private void loadChildrenInBatches(TreeItem<String> parentItem, File parentFile) {
+        File[] children = parentFile.listFiles();
+        if (children != null) {
+            for (File child : children) {
+                TreeItem<String> childItem = createTreeItem(child);
+                parentItem.getChildren().add(childItem);
+                String childPath = child.getAbsolutePath();
+                pathToItemMap.put(childPath, childItem);
             }
         }
     }
 
-
-    private void refreshChildren(TreeItem<String> item) {
-        File file = new File(buildFullPath(item));
+    private FontIcon getFileIcon(File file) {
         if (file.isDirectory()) {
-            item.getChildren().clear();
-            File[] children = file.listFiles();
-            if (children != null) {
-                for (File child : children) {
-                    item.getChildren().add(new TreeItem<>(child.getName()));
-                }
-            }
+            return new FontIcon(FontAwesomeSolid.FOLDER);
+        } else {
+            String extension = getFileExtension(file);
+            return switch (extension.toLowerCase()) {
+                case "png", "jpg", "jpeg", "gif" -> new FontIcon(FontAwesomeSolid.IMAGE);
+                case "txt" -> new FontIcon(FontAwesomeSolid.FILE_ALT);
+                default -> new FontIcon(FontAwesomeSolid.FILE);
+            };
         }
+    }
+
+    private String getFileExtension(File file) {
+        String name = file.getName();
+        int lastIndexOf = name.lastIndexOf(".");
+        if (lastIndexOf == -1) {
+            return "";
+        }
+        return name.substring(lastIndexOf + 1);
+    }
+
+    public List<File> getSelectedImageFiles() {
+        return fileTreeView.getSelectionModel().getSelectedItems().stream()
+                .map(item -> new File(buildFullPath(item)))
+                .filter(this::isImageFile)
+                .toList();
+    }
+
+    private boolean isImageFile(File file) {
+        if (!file.isFile()) return false;
+        String name = file.getName().toLowerCase();
+        return name.endsWith(".png") || name.endsWith(".jpg") || name.endsWith(".jpeg") || name.endsWith(".gif");
     }
 }
